bugfixes, renaming promp -> messages

--- a/notebooks/05_inference.ipynb
+++ b/notebooks/05_inference.ipynb
@@ -125,7 +125,7 @@
     "# LLM Classifier -> zmenit na qwen2.5\n",
     "model_name = \"Qwen2.5:7b\"\n",
     "\n",
-    "for domain, inference_df in datasets:\n",
+    "for domain, inference_df in datasets.items():\n",
     "    try:\n",
     "        llm_classifier_finance = LlmClassifier(\n",
     "            api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
@@ -168,9 +168,9 @@
     "            start_time = time.perf_counter_ns()\n",
     "\n",
     "            # Get predictions from all models\n",
-    "            pred_finance = llm_classifier_finance.predict_single(row[\"prompt\"])\n",
-    "            pred_healthcare = llm_classifier_healthcare.predict_single(row[\"prompt\"])\n",
-    "            pred_law = llm_classifier_law.predict_single(row[\"prompt\"])\n",
+    "            pred_finance = llm_classifier_finance.predict_single(row[\"messages\"])\n",
+    "            pred_healthcare = llm_classifier_healthcare.predict_single(row[\"messages\"])\n",
+    "            pred_law = llm_classifier_law.predict_single(row[\"messages\"])\n",
     "\n",
     "            end_time = time.perf_counter_ns()\n",
     "            prediction_times_llm.append(end_time - start_time)\n",
@@ -204,15 +204,15 @@
     "    bert_classifier_healthcare.classifier.model.to(\"cuda\")\n",
     "    bert_classifier_law.classifier.model.to(\"cuda\")\n",
     "\n",
-    "    for inference_df in datasets:\n",
+    "    for domain, inference_df in datasets.items():\n",
     "        # Get predictions for each prompt\n",
     "        for _, row in tqdm(inference_df.iterrows(), total=len(inference_df)):\n",
     "            start_time = time.perf_counter_ns()\n",
     "\n",
     "            # Get predictions from all models\n",
-    "            pred_finance = bert_classifier_finance.predict(row[\"prompt\"])\n",
-    "            pred_healthcare = bert_classifier_healthcare.predict(row[\"prompt\"])\n",
-    "            pred_law = bert_classifier_law.predict(row[\"prompt\"])\n",
+    "            pred_finance = bert_classifier_finance.predict(row[\"messages\"])\n",
+    "            pred_healthcare = bert_classifier_healthcare.predict(row[\"messages\"])\n",
+    "            pred_law = bert_classifier_law.predict(row[\"messages\"])\n",
     "\n",
     "            end_time = time.perf_counter_ns()\n",
     "            prediction_times_bert.append(end_time - start_time)\n",
@@ -237,7 +237,7 @@
     "prediction_times_ft = []\n",
     "\n",
     "# fastText\n",
-    "for inference_df in datasets:\n",
+    "for domain, inference_df in datasets.items():\n",
     "    fasttext_classifier_finance = FastTextClassifier(train_data=inference_df, test_data=inference_df)\n",
     "    fasttext_classifier_finance.model = fasttext.load_model(\"models/fastText_finance_fasttext.bin\")\n",
     "\n",
@@ -248,7 +248,7 @@
     "    fasttext_classifier_law.model = fasttext.load_model(\"models/fastText_law_fasttext.bin\")\n",
     "\n",
     "    for _, row in tqdm(inference_df.iterrows(), total=len(inference_df)):\n",
-    "        text = str(row[\"prompt\"])\n",
+    "        text = str(row[\"messages\"])\n",
     "        query = text.replace(\"\\n\", \"\")\n",
     "\n",
     "        start_time = time.perf_counter_ns()\n",
@@ -273,67 +273,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "embedding_models_names = [\"mini\", \"baai\", \"tfidf\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Embedding test data\n",
-    "for inference_df in datasets:\n",
-    "    start_time = time.perf_counter_ns()\n",
-    "    test_embeds = np.array(list(baai_embedding.embed(inference_df[\"prompt\"])))\n",
-    "    end_time = time.perf_counter_ns()\n",
-    "    embed_times = end_time - start_time\n",
-    "\n",
-    "    mean_embed_time = embed_times / len(inference_df)\n",
-    "\n",
-    "    with open(\"models/SVM_finance_baai.pkl\", \"rb\") as svm_file:\n",
-    "        svm_classifier_finance = pkl.load(svm_file)\n",
-    "\n",
-    "    with open(\"models/SVM_healthcare_baai.pkl\", \"rb\") as svm_file:\n",
-    "        svm_classifier_healthcare = pkl.load(svm_file)\n",
-    "\n",
-    "    with open(\"models/SVM_law_baai.pkl\", \"rb\") as svm_file:\n",
-    "        svm_classifier_law = pkl.load(svm_file)\n",
-    "\n",
-    "    xgb_classifier_finance = XGBClassifier()\n",
-    "    xgb_classifier_healthcare = XGBClassifier()\n",
-    "    xgb_classifier_law = XGBClassifier()\n",
-    "\n",
-    "    xgb_classifier_finance.load_model(\"models/XGBoost_finance_baai.json\")\n",
-    "    xgb_classifier_healthcare.load_model(\"models/XGBoost_healthcare_baai.json\")\n",
-    "    xgb_classifier_law.load_model(\"models/XGBoost_law_baai.json\")\n",
-    "\n",
-    "    predictions_xgb = []\n",
-    "    predictions_svm = []\n",
-    "\n",
-    "    prediction_times_xgb = []\n",
-    "    prediction_times_svm = []\n",
-    "\n",
-    "    actuals_ml = []\n",
-    "\n",
-    "    for test_embed in test_embeds:\n",
-    "        # SVM predictions\n",
+    "for embedding_model in embedding_models_names:\n",
+    "    for domain, inference_df in datasets.items():\n",
     "        start_time = time.perf_counter_ns()\n",
-    "        pred_finance = svm_classifier_finance.predict(test_embed.reshape(1, -1))\n",
-    "        pred_healthcare = svm_classifier_healthcare.predict(test_embed.reshape(1, -1))\n",
-    "        pred_law = svm_classifier_law.predict(test_embed.reshape(1, -1))\n",
+    "        test_embeds = np.array(list(baai_embedding.embed(inference_df[\"messages\"])))\n",
     "        end_time = time.perf_counter_ns()\n",
+    "        embed_times = end_time - start_time\n",
     "\n",
-    "        prediction_times_svm.append(end_time - start_time)\n",
-    "        # If any model predicts 1, final prediction is 0\n",
-    "        predictions_svm.append(0 if (pred_finance[0] == 1 or pred_healthcare[0] == 1 or pred_law[0] == 1) else 1)\n",
+    "        mean_embed_time = embed_times / len(inference_df)\n",
     "\n",
-    "        # XGBoost predictions\n",
-    "        start_time = time.perf_counter_ns()\n",
-    "        pred_finance = xgb_classifier_finance.predict(test_embed.reshape(1, -1))\n",
-    "        pred_healthcare = xgb_classifier_healthcare.predict(test_embed.reshape(1, -1))\n",
-    "        pred_law = xgb_classifier_law.predict(test_embed.reshape(1, -1))\n",
-    "        end_time = time.perf_counter_ns()\n",
+    "        with open(f\"models/SVM_finance_{embedding_model}.pkl\", \"rb\") as svm_file:\n",
+    "            svm_classifier_finance = pkl.load(svm_file)\n",
     "\n",
-    "        prediction_times_xgb.append(end_time - start_time)\n",
-    "        # If any model predicts 1, final prediction is 0\n",
-    "        predictions_xgb.append(0 if (pred_finance[0] == 1 or pred_healthcare[0] == 1 or pred_law[0] == 1) else 1)\n",
-    "        actuals_ml.append(row[\"label\"])\n",
+    "        with open(f\"models/SVM_healthcare_{embedding_model}.pkl\", \"rb\") as svm_file:\n",
+    "            svm_classifier_healthcare = pkl.load(svm_file)\n",
     "\n",
-    "    \n",
-    "    evaluate(predictions=predictions_svm, true_labels=actuals_ml, latency=prediction_times_svm, domain=domain, embed_model=\"\", model_name=\"fastText\", train_acc=0.0, cost=0.0)\n",
-    "    evaluate(predictions=predictions_xgb, true_labels=actuals_ml, latency=prediction_times_xgb, domain=domain, embed_model=\"\", model_name=\"XGBoost\", train_acc=0.0, cost=0.0)"
+    "        with open(f\"models/SVM_law_{embedding_model}.pkl\", \"rb\") as svm_file:\n",
+    "            svm_classifier_law = pkl.load(svm_file)\n",
+    "\n",
+    "        xgb_classifier_finance = XGBClassifier()\n",
+    "        xgb_classifier_healthcare = XGBClassifier()\n",
+    "        xgb_classifier_law = XGBClassifier()\n",
+    "\n",
+    "        xgb_classifier_finance.load_model(f\"models/XGBoost_finance_{embedding_model}.json\")\n",
+    "        xgb_classifier_healthcare.load_model(f\"models/XGBoost_healthcare_{embedding_model}.json\")\n",
+    "        xgb_classifier_law.load_model(f\"models/XGBoost_law_{embedding_model}.json\")\n",
+    "\n",
+    "        predictions_xgb = []\n",
+    "        predictions_svm = []\n",
+    "\n",
+    "        prediction_times_xgb = []\n",
+    "        prediction_times_svm = []\n",
+    "\n",
+    "        actuals_ml = []\n",
+    "\n",
+    "        for test_embed in test_embeds:\n",
+    "            if embedding_model == \"tfidf\":\n",
+    "                test_embed = test_embed.reshape(1, -1)\n",
+    "                test_embed = tfidf_finance.transform(test_embed).toarray()[0]\n",
+    "            else:\n",
+    "                test_embed = test_embed.reshape(1, -1)\n",
+    "            # SVM predictions\n",
+    "            start_time = time.perf_counter_ns()\n",
+    "            pred_finance = svm_classifier_finance.predict(test_embed)\n",
+    "            pred_healthcare = svm_classifier_healthcare.predict(test_embed)\n",
+    "            pred_law = svm_classifier_law.predict(test_embed)\n",
+    "            end_time = time.perf_counter_ns()\n",
+    "\n",
+    "            prediction_times_svm.append(end_time - start_time)\n",
+    "            # If any model predicts 1, final prediction is 0\n",
+    "            predictions_svm.append(0 if (pred_finance[0] == 1 or pred_healthcare[0] == 1 or pred_law[0] == 1) else 1)\n",
+    "\n",
+    "            # XGBoost predictions\n",
+    "            start_time = time.perf_counter_ns()\n",
+    "            pred_finance = xgb_classifier_finance.predict(test_embed)\n",
+    "            pred_healthcare = xgb_classifier_healthcare.predict(test_embed)\n",
+    "            pred_law = xgb_classifier_law.predict(test_embed)\n",
+    "            end_time = time.perf_counter_ns()\n",
+    "\n",
+    "            prediction_times_xgb.append(end_time - start_time)\n",
+    "            # If any model predicts 1, final prediction is 0\n",
+    "            predictions_xgb.append(0 if (pred_finance[0] == 1 or pred_healthcare[0] == 1 or pred_law[0] == 1) else 1)\n",
+    "            actuals_ml.append(row[\"label\"])\n",
+    "\n",
+    "        \n",
+    "        evaluate(predictions=predictions_svm, true_labels=actuals_ml, latency=prediction_times_svm, domain=domain, embed_model=embedding_model, model_name=f\"fastText_{embedding_model}\", train_acc=0.0, cost=0.0)\n",
+    "        evaluate(predictions=predictions_xgb, true_labels=actuals_ml, latency=prediction_times_xgb, domain=domain, embed_model=embedding_model, model_name=f\"XGBoost_{embedding_model}\", train_acc=0.0, cost=0.0)"
    ]
   },
   {
