refactoring and cleanup

--- a/notebooks/01_datasets.ipynb
+++ b/notebooks/01_datasets.ipynb
@@ -1,19 +1,40 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dataset Preparation\n",
+    "\n",
+    "This notebook handles the initial loading and preparation of datasets from three domains:\n",
+    "- Law\n",
+    "- Finance\n",
+    "- Healthcare"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import required libraries\n",
     "import os\n",
     "\n",
     "from prompt_classifier.modeling.datasets_config import load_datasets\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Raw Datasets\n",
+    "Load the raw datasets from their respective sources"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +151,16 @@
     }
    ],
    "source": [
+    "# Load all three datasets using the configured loader\n",
     "law_df, finance_df, healthcare_df = load_datasets()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Helper Functions\n",
+    "Define utility functions for data processing"
    ]
   },
   {
@@ -142,6 +172,14 @@
     "def extract_user_content(messages: list) -> str:\n",
     "    user_content = [msg[\"content\"] for msg in messages if msg[\"role\"] == \"user\"]\n",
     "    return ' '.join(user_content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Process Finance Dataset\n",
+    "Prepare and clean the finance dataset"
    ]
   },
   {
@@ -169,6 +207,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Process Healthcare Dataset\n",
+    "Prepare and clean the healthcare dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -180,6 +226,14 @@
     "healthcare_df = healthcare_df[healthcare_df['prompt'] != '']\n",
     "healthcare_df['label'] = 1\n",
     "healthcare_df[['prompt', 'label']].to_csv('data/interim/healthcare_prompts.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Process Law Dataset\n",
+    "Prepare and clean the law dataset"
    ]
   },
   {
