--- a/notebooks/02_processing.ipynb
+++ b/notebooks/02_processing.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Text Processing Pipeline\n",
+    "\n",
+    "This notebook implements the text preprocessing pipeline for cleaning and standardizing the prompt data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup\n",
+    "Import required libraries and configure environment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -47,6 +64,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Data\n",
+    "Load the interim datasets for processing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -62,17 +87,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Text Preprocessing\n",
+    "Define and implement text cleaning functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def preprocess_text(text: str) -> str:\n",
+    "    # Convert to lowercase\n",
     "    text = str(text).lower()\n",
+    "    # Remove special characters and numbers\n",
     "    text = re.sub(r'[^a-zA-Z\\s]', '', text)\n",
     "\n",
+    "    # Split into words\n",
     "    words = text.split()\n",
     "\n",
+    "    # Remove stopwords and short words\n",
     "    stop_words = set(stopwords.words('english'))\n",
     "    words = [word for word in words if word not in stop_words and len(word) > 2]\n",
     "    clear_output = str(' '.join(words))\n",
@@ -81,6 +118,14 @@
     "        return None\n",
     "\n",
     "    return clear_output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Apply Processing\n",
+    "Apply the preprocessing to all datasets"
    ]
   },
   {
@@ -95,6 +140,14 @@
     "\n",
     "    df = df.head(DATASET_SIZE)\n",
     "    df.to_csv(f'data/processed/{key}.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Processed Data\n",
+    "Load and verify the processed datasets"
    ]
   },
   {
