--- a/notebooks/04_results.ipynb
+++ b/notebooks/04_results.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Results Analysis and Visualization\n",
+    "\n",
+    "This notebook analyzes and visualizes the performance metrics of different models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Results\n",
+    "\n",
+    "Load the metrics from CSV files and prepare data for visualization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -36,7 +54,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "try:# Extract domain information from the model column\n",
+    "try:\n",
     "    results['domain'] = results['model'].apply(lambda x: x.split('_')[1])\n",
     "    results['embedding'] = results['model'].apply(lambda x: x.split('_')[2])\n",
     "    results['model'] = results['model'].apply(lambda x: x.split('_')[0])\n",
@@ -77,12 +95,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualization\n",
+    "\n",
+    "Create various plots to compare model performance:\n",
+    "1. Bar chart comparing accuracy across domains\n",
+    "2. Scatter plot of precision vs latency\n",
+    "3. Bar chart of inference latency"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First, define a consistent color scheme to use in both visualizations\n",
     "domain_colors = {'law': 'cornflowerblue', 'healthcare': 'orange', 'finance': 'mediumseagreen'}"
    ]
   },
@@ -92,10 +121,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create bar chart comparing model accuracy across domains\n",
     "plt.figure(figsize=(14, 8))\n",
     "\n",
-    "# Pivot the data to get models as index and domains as columns\n",
     "accuracy_by_domain_model = grouped_results.pivot_table(\n",
     "    values='precision',\n",
     "    index='model',\n",
@@ -103,17 +130,14 @@
     "    aggfunc='mean'\n",
     ")\n",
     "\n",
-    "# Plot the bar chart with custom colors\n",
     "ax = accuracy_by_domain_model.plot(kind='bar', figsize=(14, 8), width=0.7, color=[domain_colors[col] for col in accuracy_by_domain_model.columns])\n",
     "\n",
-    "# Customize the plot\n",
     "plt.title('Average Model Precision by Domain', fontsize=16)\n",
     "plt.xlabel('Model Type', fontsize=14)\n",
     "plt.ylabel('Average Precision (%)', fontsize=14)\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
     "plt.legend(title='Domain', fontsize=12)\n",
     "\n",
-    "# Add value labels on top of bars\n",
     "for container in ax.containers:\n",
     "    ax.bar_label(container, fmt='%.2f', padding=3, fontsize=9)\n",
     "\n",
@@ -127,14 +151,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the style\n",
     "plt.style.use('seaborn-v0_8-whitegrid')\n",
     "sns.set_context(\"talk\")\n",
     "\n",
-    "# Group by model and calculate mean values for latency and precision\n",
     "mean_grouped_results = grouped_results.groupby('model').mean(numeric_only=True).reset_index()\n",
-    "\n",
-    "# Create figure and axis\n",
     "fig, ax = plt.subplots(figsize=(12, 8), dpi=100)\n",
     "\n",
     "# Define markers and colors for different model types\n",
@@ -153,7 +173,6 @@
     "    'modernbert': '#9467bd'     # purple\n",
     "}\n",
     "\n",
-    "# Create scatter plot with markers for models and colors for domains\n",
     "for idx, row in mean_grouped_results.iterrows():\n",
     "    model = row['model']\n",
     "    plt.scatter(row['latency'], row['precision'],\n",
@@ -165,7 +184,6 @@
     "                alpha=0.8,\n",
     "                zorder=10)\n",
     "\n",
-    "    # Add labels to each point with a styled annotation box\n",
     "    label_text = f\"{model}\"\n",
     "    bbox_props = {\n",
     "        \"boxstyle\": 'round,pad=0.5',\n",
@@ -184,20 +202,16 @@
     "                 bbox=bbox_props,\n",
     "                 zorder=11)\n",
     "\n",
-    "# Add a horizontal line for average precision\n",
     "avg_precision = mean_grouped_results['precision'].mean()\n",
     "plt.axhline(y=avg_precision, color='gray', linestyle='--', alpha=0.7, linewidth=2,\n",
     "            label=f'Avg Precision: {avg_precision:.2f}')\n",
     "\n",
-    "# Calculate and add a vertical line for average latency\n",
     "avg_latency = mean_grouped_results['latency'].mean()\n",
     "plt.axvline(x=avg_latency, color='gray', linestyle='--', alpha=0.7, linewidth=2,\n",
     "            label=f'Avg Latency: {avg_latency:.2f}')\n",
     "\n",
-    "# Use logarithmic scale for x-axis to better visualize differences\n",
     "plt.xscale('log')\n",
     "\n",
-    "# Create custom legend for models (and add average lines)\n",
     "legend_elements = [\n",
     "    Patch(facecolor=colors[model], edgecolor='black',\n",
     "          label=f\"{model} (Precision: {mean_grouped_results[mean_grouped_results['model'] == model]['precision'].values[0]:.2f})\")\n",
@@ -209,43 +223,33 @@
     "           frameon=True, framealpha=0.9, edgecolor='black',\n",
     "           fontsize=10, title='Model Performance', title_fontsize=12)\n",
     "\n",
-    "# Customize plot with title and axis labels\n",
     "plt.title('Model Performance: Precision vs. Latency', fontsize=20, fontweight='bold', pad=20)\n",
     "plt.xlabel('Latency (ms, log scale)', fontsize=16, labelpad=15)\n",
     "plt.ylabel('Precision', fontsize=16, labelpad=15)\n",
     "\n",
-    "# Add background gradient\n",
     "gradient = np.linspace(0, 1, 100).reshape(-1, 1)\n",
     "plt.imshow(gradient, cmap=plt.cm.Blues, alpha=0.1, aspect='auto',\n",
     "           extent=[ax.get_xlim()[0], ax.get_xlim()[1], ax.get_ylim()[0], ax.get_ylim()[1]])\n",
     "\n",
-    "# Add grid styling\n",
     "plt.grid(True, linestyle='--', alpha=0.4, linewidth=0.8)\n",
     "plt.xticks(fontsize=12)\n",
     "plt.yticks(fontsize=12)\n",
     "\n",
-    "# Customize x-axis tick formatter\n",
     "ax.xaxis.set_major_formatter(FuncFormatter(lambda x, _: f'{x:.1f}'))\n",
     "\n",
-    "# Get current axis limits for quadrant annotations\n",
     "x_min, x_max = ax.get_xlim()\n",
     "y_min, y_max = ax.get_ylim()\n",
     "\n",
-    "# For the x-axis (log scale), compute the geometric mean for left/right quadrant centers\n",
     "q_left = np.exp((np.log(x_min) + np.log(avg_latency)) / 2)\n",
     "q_right = np.exp((np.log(avg_latency) + np.log(x_max)) / 2)\n",
-    "# For the y-axis (linear), compute the arithmetic means for top/bottom quadrant centers\n",
     "q_bottom = (y_min + avg_precision) / 2\n",
     "q_top = (avg_precision + y_max) / 2\n",
     "\n",
     "# Annotate the quadrants\n",
-    "# Top-left: Low Latency, High Precision (optimal performance)\n",
     "ax.text(q_left, q_top, 'High Precision\\nLow Latency', ha='center', va='center',\n",
     "        fontsize=12, fontweight='bold', color='black', alpha=0.8, zorder=12)\n",
-    "# Bottom-left: Low Latency, Low Precision\n",
     "ax.text(q_left, q_bottom, 'Low Precision\\nLow Latency', ha='center', va='center',\n",
     "        fontsize=12, fontweight='bold', color='black', alpha=0.8, zorder=12)\n",
-    "# Bottom-right: High Latency, Low Precision\n",
     "ax.text(q_right, q_bottom, 'Low Precision\\nHigh Latency', ha='center', va='center',\n",
     "        fontsize=12, fontweight='bold', color='black', alpha=0.8, zorder=12)\n",
     "\n",
@@ -273,7 +277,7 @@
     "\n",
     "# Create the bar plot with improved styling\n",
     "fig = plt.figure(figsize=(14, 8), dpi=100)\n",
-    "ax = fig.add_subplot(111)  # Correctly create the axis object\n",
+    "ax = fig.add_subplot(111) \n",
     "\n",
     "bars = plt.bar(latency_by_model.index, latency_by_model.values,\n",
     "               color=sns.color_palette(\"viridis\", len(latency_by_model)),\n",
@@ -289,22 +293,17 @@
     "             display_value, ha='center', va='bottom',\n",
     "             fontsize=10, fontweight='bold', color='black')\n",
     "\n",
-    "# Customize the plot\n",
     "plt.title('Average Inference Latency by Model Type', fontsize=18, fontweight='bold', pad=20)\n",
     "plt.xlabel('Model Type', fontsize=14, labelpad=10)\n",
     "plt.ylabel('Average Latency (ms, log scale)', fontsize=14, labelpad=10)\n",
     "\n",
-    "# Better grid\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.3)\n",
-    "\n",
-    "# Improved x-axis labels\n",
     "plt.xticks(rotation=30, ha='right', fontsize=12)\n",
     "\n",
     "# Use logarithmic scale with better formatting\n",
     "plt.yscale('log')\n",
     "ax.yaxis.set_major_formatter(plt.FuncFormatter(lambda x, _: f'{x:.1f}'))\n",
     "\n",
-    "# Add a light background color to highlight the chart area\n",
     "ax.set_facecolor('#f8f9fa')\n",
     "\n",
     "# Add subtle spines\n",
