--- a/notebooks/05_inference.ipynb
+++ b/notebooks/05_inference.ipynb
@@ -1,6 +1,44 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Out-of-Domain Generalization: Hate Speech Detection\n",
+    "\n",
+    "This notebook evaluates how well domain-specific classifiers generalize to out-of-domain hate speech detection.\n",
+    "We test various model architectures trained on domain classification to see if they can effectively identify hate speech.\n",
+    "\n",
+    "Key aspects evaluated:\n",
+    "- Few-shot transfer capabilities using DSPy\n",
+    "- Model robustness across different datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Overview\n",
+    "\n",
+    "This notebook evaluates several classification models:\n",
+    "1. **LLM-based**: Using Qwen 2.5 for zero-shot classification\n",
+    "2. **BERT-based**: ModernBERT with NLI approach\n",
+    "3. **Traditional ML**: \n",
+    "   - fastText for efficient text classification\n",
+    "   - SVM and XGBoost with different embeddings\n",
+    "\n",
+    "Each model is evaluated on hate speech detection as an out-of-domain task."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup\n",
+    "Import dependencies and initialize models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -26,6 +64,19 @@
     "\n",
     "load_dotenv()\n",
     "random.seed(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Test Datasets\n",
+    "\n",
+    "Load various hate speech datasets for evaluation:\n",
+    "- Jigsaw Toxicity\n",
+    "- OLID\n",
+    "- HateXplain\n",
+    "- TUKE Slovak"
    ]
   },
   {
@@ -84,6 +135,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Datasets Overview\n",
+    "\n",
+    "We use four major hate speech datasets:\n",
+    "\n",
+    "1. **Jigsaw Toxicity**\n",
+    "   - Multi-label toxicity classification\n",
+    "   - Includes toxic, severe_toxic, obscene, threat, insult, identity_hate labels\n",
+    "\n",
+    "2. **OLID (Offensive Language Identification Dataset)**\n",
+    "   - Hierarchical labeling of offensive language\n",
+    "   - Focuses on Twitter content\n",
+    "\n",
+    "3. **HateXplain**\n",
+    "   - Annotated with rationales for hate speech\n",
+    "   - Includes target community information\n",
+    "\n",
+    "4. **TUKE Slovak**\n",
+    "   - Slovak language hate speech dataset\n",
+    "   - Tests cross-lingual generalization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Embedding Models\n",
+    "\n",
+    "Using multiple embedding approaches:\n",
+    "- **BAAI BGE**: Optimized for semantic similarity\n",
+    "- **MiniLM**: Efficient sentence transformers model\n",
+    "- **TF-IDF**: Traditional bag-of-words approach\n",
+    "\n",
+    "These embeddings are used with SVM and XGBoost classifiers."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -114,6 +204,20 @@
     "tfidf_finance = pkl.load(open(\"./models/tfidf_finance.pkl\", \"rb\"))\n",
     "tfidf_healthcare = pkl.load(open(\"./models/tfidf_healthcare.pkl\", \"rb\"))\n",
     "tfidf_law = pkl.load(open(\"./models/tfidf_law.pkl\", \"rb\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Evaluation Process\n",
+    "\n",
+    "For each dataset and model combination:\n",
+    "1. Load pre-trained domain classifiers\n",
+    "2. Process test samples through each domain classifier\n",
+    "3. Combine predictions using OR logic (any domain=1 -> toxic=0)\n",
+    "4. Calculate metrics:\n",
+    "   - Accuracy, Precision, Recall"
    ]
   },
   {
