--- a/notebooks/06_mlp.ipynb
+++ b/notebooks/06_mlp.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Multi-Layer Perceptron (MLP) Model Training\n",
+    "\n",
+    "This notebook implements a simple MLP classifier using PyTorch for domain classification."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup\n",
+    "Import required libraries and set random seed for reproducibility"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -24,6 +41,32 @@
     "from transformers import AutoModel, AutoTokenizer\n",
     "\n",
     "random.seed(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Architecture\n",
+    "\n",
+    "Define helper functions and model architecture:\n",
+    "- Mean pooling for handling variable length sequences\n",
+    "- Dynamic Tanh (DyT) activation layer\n",
+    "- MLP head with DyT activations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset Overview\n",
+    "\n",
+    "This implementation uses three domain-specific datasets:\n",
+    "- **Finance**: Questions and answers from finance domain\n",
+    "- **Health**: Healthcare related conversations from ChatDoctor\n",
+    "- **Law**: Legal questions from Law Stack Exchange\n",
+    "\n",
+    "These datasets will be used to train a classifier that can identify the domain of input text."
    ]
   },
   {
@@ -205,6 +248,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Components\n",
+    "\n",
+    "The model architecture consists of several key components:\n",
+    "\n",
+    "1. **Base Model**: Using sentence-transformers/all-MiniLM-L6-v2 for text embeddings\n",
+    "2. **Mean Pooling**: Converts variable length sequences to fixed size embeddings\n",
+    "3. **DyT Activation**: Dynamic Tanh activation function with learnable parameters\n",
+    "4. **MLP Head**: Multi-layer perceptron classifier with DyT activations\n",
+    "\n",
+    "The training process is split into two phases:\n",
+    "1. Training with frozen backbone weights\n",
+    "2. Fine-tuning the entire model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -260,6 +321,15 @@
     "optim_frozen = AdamW(model.head.parameters(), lr=FREEZE_TRAIN_LR, weight_decay=0.01)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "scaler = torch.GradScaler()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Loading and Preprocessing\n",
+    "\n",
+    "Load domain-specific datasets and prepare them for training:"
    ]
   },
   {
@@ -348,6 +418,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training Loop\n",
+    "\n",
+    "Train the model in two phases:\n",
+    "1. Train with frozen backbone weights\n",
+    "2. Fine-tune the full model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -420,6 +501,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation on Hate Speech Datasets\n",
+    "\n",
+    "The model is evaluated on multiple hate speech datasets to assess cross-domain performance:\n",
+    "- Jigsaw Toxicity Classification\n",
+    "- OLID (Offensive Language Identification)\n",
+    "- HateXplain\n",
+    "- TUKE Slovak Hate Speech\n",
+    "\n",
+    "This helps understand how well the domain classifier handles potentially harmful content."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -470,6 +566,22 @@
    "outputs": [],
    "source": [
     "accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results Visualization\n",
+    "\n",
+    "The confusion matrix shows the model's performance across domains:\n",
+    "- Diagonal elements represent correct classifications\n",
+    "- Off-diagonal elements show misclassifications between domains\n",
+    "\n",
+    "Additional metrics calculated:\n",
+    "- Accuracy: Overall correct predictions\n",
+    "- Precision: True positives / (True positives + False positives)\n",
+    "- Recall: True positives / (True positives + False negatives)"
    ]
   },
   {
